# myCTest

./: CMakeLists.txt  README.md  cpuTest.c  server.c
vscode配置文件/: launch.json  settings.json  tasks.json
